--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     background-color: black;
 }
 
-.container{
+ .container{
     position: absolute;
     width: 550px;
     height: 550px;
@@ -155,4 +155,158 @@ body{
         right: 120px;
         bottom: 120px;
         animation-delay: 6.5s;
+       } 
+
+       /* .container_1{
+        position: absolute;
+        width: 550px;
+        height: 550px;
+        transform-style: preserve-3d;
+        transform: perspective(600px) rotate(600px);
+    }
+    
+    .container_1 span{
+        position: absolute;
+        display: block;
+        box-sizing: border-box;
+        border: 2px solid white;
+        margin: 10px;
+        box-shadow: 0 0 10px white;
+        animation: span 40s ease-in-out infinite;
+    }
+    
+    @keyframes span{
+        0%{
+            transform: rotate(0deg);
+            border-radius: 0;
+        }
+    
+        20%{
+            box-shadow: 0 0 40px rgb(120,255,0)
+        }
+    
+        50%{
+            transform: rotate(360deg);
+            background-color: black;
+            box-shadow: 0 0 40px rgb(0,238,255);
+            border-radius: 20%;
+        }
+    
+        70%{
+            box-shadow:  0 0 40px rgb(255,102,0);
+        }
+    
+        100%{
+            transform: rotate(0deg);
+        }
+    }
+    
+    .container_1 span:nth-child(1){
+     top: 0;
+     left: 0;
+     right: 0;
+     bottom: 0;
+     animation-delay: 0.5s;
+    }
+    
+    .container_1 span:nth-child(2){
+        top: 10px;
+        left: 10px;
+        right: 10px;
+        bottom: 10px;
+        animation-delay: 1s;
        }
+    
+       .container_1 span:nth-child(3){
+        top: 20px;
+        left: 20px;
+        right: 20px;
+        bottom: 20px;
+        animation-delay: 1.5s;
+       }
+    
+       .container_1 span:nth-child(4){
+        top: 30px;
+        left: 30px;
+        right: 30px;
+        bottom: 30px;
+        animation-delay: 2s;
+       }
+    
+       .container_1 span:nth-child(5){
+        top: 40px;
+        left: 40px;
+        right: 40px;
+        bottom: 40px;
+        animation-delay: 2.5s;
+       }
+    
+       .container_1 span:nth-child(6){
+        top: 50px;
+        left: 50px;
+        right: 50px;
+        bottom: 50px;
+        animation-delay: 3s;
+       }
+       
+       .container_1 span:nth-child(7){
+           top: 60px;
+           left:60px;
+           right: 60px;
+           bottom: 60px;
+           animation-delay: 3.5s;
+          }
+       
+          .container_1 span:nth-child(8){
+           top: 70px;
+           left: 70px;
+           right: 70px;
+           bottom: 70px;
+           animation-delay: 4s;
+          }
+       
+          .container_1 span:nth-child(9){
+           top: 80px;
+           left: 80px;
+           right: 80px;
+           bottom: 80px;
+           animation-delay:4.5s;
+          }
+       
+          .container_1 span:nth-child(10){
+           top: 90px;
+           left: 90px;
+           right: 90px;
+           bottom: 90px;
+           animation-delay: 5s;
+          }
+    
+          .container_1 span:nth-child(11){
+            top: 100px;
+            left: 100px;
+            right: 100px;
+            bottom: 100px;
+            animation-delay: 5.5s;
+           }
+        
+           .container_1 span:nth-child(12){
+            top: 110px;
+            left: 110px;
+            right: 110px;
+            bottom: 110px;
+            animation-delay:6s;
+           }
+        
+           .container_1 span:nth-child(13){
+            top: 120px;
+            left: 120px;
+            right: 120px;
+            bottom: 120px;
+            animation-delay: 6.5s;
+           }
+
+       main{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+       } */
